# DaedalusEngine-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  DaedalusEngine.sln  DaedalusEngine.vcxproj  DaedalusEngine.vcxproj.filters  README.md  build.sh  fragment.shader  main.cpp  vertex.shader
Application/: Application.cpp  ApplicationState.h
Audio/: AudioManager.cpp  AudioManager.h
Game/: AudioComponent.h  Component.h  Container.h  MusicComponent.h
Graphics/: RenderingManager.cpp  RenderingManager.h
Input/: Input.h  InputManager.cpp  InputManager.h
Resource/: ResourceLoader.cpp  ResourceLoader.h
Utilities/: Utilities.cpp  Utilities.h
Window/: NativeWindowInformation.h  WindowManager.cpp  WindowManager.h
include/Application/: Application.h
include/Audio/: Audio.h
include/Game/: AudioComponent.h  MusicComponent.h
include/Graphics/: Rendering.h  RenderingManager.h  Vertex.h
include/Input/: Input.h
include/Resource/: Resource.h
include/Utilities/: Utilities.h
include/Window/: NativeWindowInformation.h  Window.h
include/components/: RenderableComponent.h  TransformComponent.h
include/ecs/: ComponentStorage.h  Entity.h
include/systems/: CalculateTransformations.h  HandleInput.h  InitializeDependencies.h
include/utils/: RenderUtils.h
shaders/: fragment.sc  shader.frag  shader.vert  vertex.sc
src/: main.cpp
src/Application/: Application.cpp
src/Audio/: Audio.cpp  AudioManager.cpp
src/Graphics/: Rendering.cpp  RenderingManager.cpp
src/Input/: Input.cpp  InputManager.cpp
src/Resource/: Resource.cpp  ResourceLoader.cpp
(+8 files in other folders)
